# cs224n_gpt2

./: .modalignore  README.md  classifier.py  config.py  main.py  memory_eval.py  optimizer.py  paraphrase_detection.py  pyproject.toml  sonnet_generation.py
models/: gpt2.py
modules/: attention.py  benchmark_metrics.py  flash_attention.py  gpt2_layer.py
output/L4/: Forward Pass Latency Benchmark.csv
output/plots/: Back Prop Latency Benchmark.csv  Forward Pass Latency Benchmark.csv  flash_attention_forward_benchmark.csv  results.html
output/plots/Block_128/: Back Prop Latency Benchmark.csv  Forward Pass Latency Benchmark.csv
output/plots/Block_16/: Back Prop Latency Benchmark.csv  Forward Pass Latency Benchmark.csv
output/plots/Block_32/: Back Prop Latency Benchmark.csv  Forward Pass Latency Benchmark.csv  results.html
predictions/: full-model-cfimdb-dev-out.csv  full-model-cfimdb-test-out.csv  full-model-sst-dev-out.csv  full-model-sst-test-out.csv  generated_sonnets.txt  last-linear-layer-cfimdb-dev-out.csv  last-linear-layer-cfimdb-test-out.csv  last-linear-layer-sst-dev-out.csv  last-linear-layer-sst-test-out.csv  para-dev-output.csv  para-test-output.csv
